Bug 1121404 - Cache addresses of bonded devices and notify adapter properly. r=btian